--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,9 @@
 {
   "name": "ionic-datepicker",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "authors": [
-    "rajeshwarpatlolla <rajeshwar.patlolla@gmail.com>"
+    "rajeshwarpatlolla <rajeshwar.patlolla@gmail.com>",
+    "dionesandrade <diones.andrade@gmail.com>"
   ],
   "description": "A date picker component for ionic framework applications",
   "main": [
@@ -27,6 +28,15 @@
     "tests"
   ],
   "dependencies": {
-    "ionic": ">=0.9.27"
+    "ionic": "~1.0.0"
+  },
+  "devDependencies": {
+    "gulp": "~3.8.11",
+    "gulp-clean": "^0.3.1",
+    "gulp-concat": "~2.4.3",
+    "gulp-minify-css": "~0.4.5",
+    "gulp-minify-html": "~0.1.8",
+    "gulp-ng-html2js": "~0.1.8",
+    "gulp-uglify": "~1.1.0"
   }
 }
