--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic-datepicker",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A date picker for IONIC framework",
   "main": "",
   "scripts": {},
@@ -10,15 +10,15 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "ionic": "~1.0.0"
+    "ionic": ">=1.0"
   },
   "devDependencies": {
-    "gulp-clean": "^0.3.1",
-    "gulp": "~3.8.11",
-    "gulp-ng-html2js": "~0.1.8",
-    "gulp-concat": "~2.4.3",
-    "gulp-uglify": "~1.1.0",
-    "gulp-minify-html": "~0.1.8",
-    "gulp-minify-css": "~0.4.5"
+    "gulp-clean": "~0.3",
+    "gulp": "~3.8",
+    "gulp-ng-html2js": "~0.1",
+    "gulp-concat": "~2.4",
+    "gulp-uglify": "~1.1",
+    "gulp-minify-html": "~0.1",
+    "gulp-minify-css": "~0.4"
   }
 }
